--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,10 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100%;
+  max-width: 414px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .main {
